# e01

./: CMakeLists.txt  e01  todo
.cache/clangd/index/: common.c.E91D4C28A57B2BF0.idx  common.h.7A061D6797C2F011.idx  definitions.h.5644CB0D9BE4005A.idx  dynamic_arrays.c.D40F845F6A391BFC.idx  dynamic_arrays.h.DB37F6BEE44D9C94.idx  game.c.51605698C644EFC6.idx  game.h.5FBB49B478925EBE.idx  glad.c.095651B1FC5E9025.idx  glad.h.C9F0BF4648E3BD90.idx  input.c.A591A750E9ADA948.idx  input.h.3926F7B9640AE873.idx  io.c.126EBE82FFA612AE.idx  io.h.BE6B6D3E32BDC5D9.idx  khrplatform.h.602BE1341471EE5F.idx  main.c.CA6ADDB02BAB5403.idx  renderer.c.B04CA88D4D42A53C.idx  renderer.h.73D6CAA165F96B71.idx  shader.c.5BC45A7E7F98E63F.idx  shader.h.F040247CC5107F9F.idx  texture.c.5A85DC3E5C392195.idx  texture.h.1E9CB077C1D6D12B.idx  transform.c.66B514168062EF3E.idx  transform.h.8A8563EDEB1A9BCE.idx
res/: test.xml  vertex_shader
res/fonts/default/: default-sans-serif.xml
res/textures/: base.tga  base2.tga  base3.tga  pallette.tga  pallette2.tga
src/: common.c  common.h  definitions.h  dynamic_arrays.c  dynamic_arrays.h  game.c  game.h  glad.c  glad.h  input.c  input.h  io.c  io.h  main.c  renderer.c  renderer.h  shader.c  shader.h  shaders.h  texture.c  texture.h  transform.c  transform.h
src/common/: common.h  definitions.h  dynamic_arrays.c  dynamic_arrays.h  io.c  io.h
src/game/: game.c  game.h  input.c  input.h  transform.h
src/renderer/: renderer.c  renderer.h  shader.c  texture.c  texture.h
